# onyx

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini
Shaders/: aabb.compute  bvh.frag  bvh.geom  bvh.vert  grid.frag  grid.geom  grid.vert  normal.frag  normal.vert  triangle.frag  triangle.vert
Shaders/aabb/: aabb copy.vert  aabb.frag  aabb.vert
Shaders/lbvh/: calculateBounds copy.comp  calculateBounds.comp  createNodes copy.comp  createNodes.comp
Shaders/render/: convert.comp  render copy.comp  render.comp
Shaders/viewport/: grid.frag  grid.vert
src/: Application.cpp  Application.h  Camera.cpp  ComputeShader.h  Config.h  GridShader.h  Log.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object3D.h  Renderer.h  Scene copy.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderUniformSetter.h  UUID.cpp  UUID.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  main copy.cpp  main.cpp
src/buffer/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/core/: Base.h  Log.cpp  Log.h  Timestep.h
src/input/: Input.cpp  Input.h  KeyCodes.h  MouseButtonCodes.h
src/platform/: Window.h  Windows.cpp
src/renderer/: Camera.h  EditorCamera.cpp  EditorCamera.h  Material.cpp  Material.h  Object3D.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/renderer/acceleration/: BLASManager.h
src/scene/: Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
src/shaders/: ComputeShader.cpp  ComputeShader.h  Shader.cpp  Shader.h  ShaderUniformSetter.h
